--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 
 	<groupId>sc.fiji</groupId>
-	<artifactId>NMQC</artifactId>
+	<artifactId>NMQC_</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 
 	<name>plugins/NMQC.jar</name>
@@ -46,13 +46,6 @@
 		<main-class>NMQC</main-class>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>net.imagej</groupId>
-			<artifactId>ij</artifactId>
-		</dependency>
-	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -67,5 +60,10 @@
 			</plugin>
 		</plugins>
 	</build>
-
+    <dependencies>
+        <dependency>
+            <groupId>net.imagej</groupId>
+            <artifactId>ij</artifactId>
+        </dependency>
+    </dependencies>
 </project>
