--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -27,3 +27,10 @@ Plugins>NMQC, "Spatial Resolution X", NMQC.Spatial_Resol_X
 Plugins>NMQC, "Spatial Resolution Y", NMQC.Spatial_Resol_Y
 
 Help>About_Plugins>NMQC, "About C O R", NMQC.C_O_R("about")
+Help>About_Plugins>NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
+Help>About_Plugins>NMQC, "About Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X("about")
+Help>About_Plugins>NMQC, "About Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y("about")
+Help>About_Plugins>NMQC, "About Pixel Size X", NMQC.Pixel_Size_X("about")
+Help>About_Plugins>NMQC, "About Pixel Size Y", NMQC.Pixel_Size_Y("about")
+Help>About_Plugins>NMQC, "About Spatial Resolution X", NMQC.Spatial_Resol_X("about")
+Help>About_Plugins>NMQC, "About Spatial Resolution Y", NMQC.Spatial_Resol_Y("about")
