all checks goes to setup

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 			<id>rtf</id>
 			<name>Ricardo Terrero</name>
 			<email>ricardoterrero92@gmail.com</email>
-			<url></url>
+			<url>https://github.com/ricardoterrero92</url>
 			<organization>INSTEC</organization>
 			<organizationUrl>http://www.instec.cu/</organizationUrl>
 			<roles>
