--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -25,6 +25,8 @@ Plugins>NMQC, "Pixel Size X", NMQC.Pixel_Size_X
 Plugins>NMQC, "Pixel Size Y", NMQC.Pixel_Size_Y
 Plugins>NMQC, "Spatial Resolution X", NMQC.Spatial_Resol_X
 Plugins>NMQC, "Spatial Resolution Y", NMQC.Spatial_Resol_Y
+Plugins>NMQC>Tools, "Geometric Mean", NMQC.Geometric_Mean
+Plugins>NMQC>Tools, "Cardiac Reslicer", NMQC.Cardiac_Reslicer
 
 Help>About_NMQC, "About C O R", NMQC.C_O_R("about")
 Help>About_NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
@@ -34,3 +36,5 @@ Help>About_NMQC, "About Pixel Size X", NMQC.Pixel_Size_X("about")
 Help>About_NMQC, "About Pixel Size Y", NMQC.Pixel_Size_Y("about")
 Help>About_NMQC, "About Spatial Resolution X", NMQC.Spatial_Resol_X("about")
 Help>About_NMQC, "About Spatial Resolution Y", NMQC.Spatial_Resol_Y("about")
+Help>About_NMQC, "About Geometric Mean", NMQC.Geometric_Mean("about")
+Help>About_NMQC, "About Cardiac Reslicer", NMQC.Cardiac_Reslicer("about")
