Added Tomographic Uniformity

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -19,6 +19,7 @@
 
 Plugins>NMQC, "Center of Rotation", NMQC.C_O_R
 Plugins>NMQC, "Planar Uniformity", NMQC.Planar_Uniformity
+Plugins>NMQC, "Tomographic Uniformity", NMQC.Planar_Uniformity
 Plugins>NMQC, "Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X
 Plugins>NMQC, "Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y
 Plugins>NMQC, "Pixel Size X", NMQC.Pixel_Size_X
