--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -22,6 +22,7 @@ Plugins>NMQC, "Planar Uniformity", NMQC.Planar_Uniformity
 Plugins>NMQC, "Tomographic Uniformity", NMQC.Planar_Uniformity
 Plugins>NMQC, "Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X
 Plugins>NMQC, "Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y
+Plugins>NMQC, "Four Bar Phantom", NMQC.Four_Bar_Phantom
 Plugins>NMQC, "Pixel Size X", NMQC.Pixel_Size_X
 Plugins>NMQC, "Pixel Size Y", NMQC.Pixel_Size_Y
 Plugins>NMQC, "Spatial Resolution X", NMQC.Spatial_Resol_X
@@ -33,6 +34,7 @@ Help>About_NMQC, "About C O R", NMQC.C_O_R("about")
 Help>About_NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
 Help>About_NMQC, "About Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X("about")
 Help>About_NMQC, "About Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y("about")
+Help>About_NMQC, "About Four Bar Phantom", NMQC.Four_Bar_Phantom("about")
 Help>About_NMQC, "About Pixel Size X", NMQC.Pixel_Size_X("about")
 Help>About_NMQC, "About Pixel Size Y", NMQC.Pixel_Size_Y("about")
 Help>About_NMQC, "About Spatial Resolution X", NMQC.Spatial_Resol_X("about")
