--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>NMQC_</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 
 	<name>plugins/NMQC.jar</name>
 	<description>A Maven project implementing Nuclear Medicine Quality Control utilities</description>
