--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -19,7 +19,7 @@
 
 Plugins>NMQC, "Center of Rotation", NMQC.C_O_R
 Plugins>NMQC, "Planar Uniformity", NMQC.Planar_Uniformity
-Plugins>NMQC, "Tomographic Uniformity", NMQC.Planar_Uniformity
+Plugins>NMQC, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
 Plugins>NMQC, "Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X
 Plugins>NMQC, "Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y
 Plugins>NMQC, "Four Bar Phantom", NMQC.Four_Bar_Phantom
@@ -30,6 +30,7 @@ Plugins>NMQC>Tools, "Cardiac Reslicer", NMQC.Tools.Cardiac_Reslicer
 
 Help>About_NMQC, "About C O R", NMQC.C_O_R("about")
 Help>About_NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
+Help>About_NMQC, "About Tomographic Uniformity", NMQC.Tomographic_Uniformity("about")
 Help>About_NMQC, "About Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X("about")
 Help>About_NMQC, "About Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y("about")
 Help>About_NMQC, "About Four Bar Phantom", NMQC.Four_Bar_Phantom("about")
