Added Quadrant Bar Phantom handling

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -23,6 +23,7 @@ Plugins>NMQC, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
 Plugins>NMQC, "Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X
 Plugins>NMQC, "Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y
 Plugins>NMQC, "Four Bar Phantom", NMQC.Four_Bar_Phantom
+Plugins>NMQC, "Quadrant Bar Phantom", NMQC.Bar_Quadrant
 Plugins>NMQC, "Spatial Resolution and Pixel Size X", NMQC.SSR_PxSz_X
 Plugins>NMQC, "Spatial Resolution and Pixel Size Y", NMQC.SSR_PxSz_Y
 Plugins>NMQC>Tools, "Geometric Mean", NMQC.Tools.Geometric_Mean
@@ -34,6 +35,7 @@ Help>About_NMQC, "About Tomographic Uniformity", NMQC.Tomographic_Uniformity("ab
 Help>About_NMQC, "About Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X("about")
 Help>About_NMQC, "About Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y("about")
 Help>About_NMQC, "About Four Bar Phantom", NMQC.Four_Bar_Phantom("about")
+Help>About_NMQC, "About Quadrant Bar Phantom", NMQC.Bar_Quadrant("about")
 Help>About_NMQC, "About Spatial Resolution and Pixel Size X", NMQC.Spatial_Resol_X("about")
 Help>About_NMQC, "About Spatial Resolution and Pixel Size Y", NMQC.Spatial_Resol_Y("about")
 Help>About_NMQC, "About Geometric Mean", NMQC.Tools.Geometric_Mean("about")
