--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -17,15 +17,16 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-Plugins>NMQC, "Center of Rotation", NMQC.C_O_R
 Plugins>NMQC, "Planar Uniformity", NMQC.Planar_Uniformity
 Plugins>NMQC, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
-Plugins>NMQC, "Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X
-Plugins>NMQC, "Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y
 Plugins>NMQC, "Four Bar Phantom", NMQC.Four_Bar_Phantom
 Plugins>NMQC, "Quadrant Bar Phantom", NMQC.Bar_Quadrant
-Plugins>NMQC, "Spatial Resolution and Pixel Size X", NMQC.SSR_PxSz_X
-Plugins>NMQC, "Spatial Resolution and Pixel Size Y", NMQC.SSR_PxSz_Y
+Plugins>NMQC>Center of Rotation, "Sine Fit", NMQC.C_O_R("Sine")
+Plugins>NMQC>Center of Rotation, "Conjugate Views", NMQC.C_O_R("Conjugate")
+Plugins>NMQC>Intrinsic Resolution and Linearity, "IRL X", NMQC.IntResol_Linearity_X
+Plugins>NMQC>Intrinsic Resolution and Linearity, "IRL Y", NMQC.IntResol_Linearity_Y
+Plugins>NMQC>Spatial Resolution and Pixel_Size, "SSR PxSz X", NMQC.SSR_PxSz_X
+Plugins>NMQC>Spatial Resolution and Pixel_Size, "SSR PxSz Y", NMQC.SSR_PxSz_Y
 Plugins>NMQC>Tools, "Geometric Mean", NMQC.Tools.Geometric_Mean
 Plugins>NMQC>Tools, "Cardiac Reslicer", NMQC.Tools.Cardiac_Reslicer
 
