--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -23,8 +23,8 @@ Plugins>NMQC>Center of Rotation, "Sine Fit", NMQC.C_O_R("Sine")
 Plugins>NMQC>Center of Rotation, "Conjugate Views", NMQC.C_O_R("Conjugate")
 Plugins>NMQC>Intrinsic Resolution and Linearity, "Horizontal Stripes", NMQC.IntResol_Linearity("Horizontal")
 Plugins>NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes", NMQC.IntResol_Linearity("Vertical")
-Plugins>NMQC>Spatial Resolution and Pixel_Size, "Vertical Bars", NMQC.SSR_PxSz("Vertical")
-Plugins>NMQC>Spatial Resolution and Pixel_Size, "Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
+Plugins>NMQC>Spatial Resolution and Pixel_Size, "Two Vertical Bars", NMQC.SSR_PxSz("Vertical")
+Plugins>NMQC>Spatial Resolution and Pixel_Size, "Two Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
 Plugins>NMQC>Spatial Resolution and Pixel_Size, "Four Bars", NMQC.Four_Bar_Phantom
 Plugins>NMQC>Spatial Resolution and Pixel_Size, "Quadrant Bar", NMQC.Bar_Quadrant
 Plugins>NMQC>Tools, "Geometric Mean", NMQC.Tools.Geometric_Mean
