--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -33,11 +33,9 @@ Plugins>NMQC>Tools, "Cardiac Reslicer", NMQC.Tools.Cardiac_Reslicer
 Help>About_NMQC, "About C O R", NMQC.C_O_R("about")
 Help>About_NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
 Help>About_NMQC, "About Tomographic Uniformity", NMQC.Tomographic_Uniformity("about")
-Help>About_NMQC, "About Intrinsic Resolution and Linearity X", NMQC.IntResol_Linearity_X("about")
-Help>About_NMQC, "About Intrinsic Resolution and Linearity Y", NMQC.IntResol_Linearity_Y("about")
+Help>About_NMQC, "About Intrinsic Resolution and Linearity", NMQC.IntResol_Linearity("about")
 Help>About_NMQC, "About Four Bar Phantom", NMQC.Four_Bar_Phantom("about")
 Help>About_NMQC, "About Quadrant Bar Phantom", NMQC.Bar_Quadrant("about")
-Help>About_NMQC, "About Spatial Resolution and Pixel Size X", NMQC.Spatial_Resol_X("about")
-Help>About_NMQC, "About Spatial Resolution and Pixel Size Y", NMQC.Spatial_Resol_Y("about")
+Help>About_NMQC, "About Spatial Resolution and Pixel Size", NMQC.SSR_PxSz("about")
 Help>About_NMQC, "About Geometric Mean", NMQC.Tools.Geometric_Mean("about")
 Help>About_NMQC, "About Cardiac Reslicer", NMQC.Tools.Cardiac_Reslicer("about")
