--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -18,17 +18,19 @@
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 Plugins>NMQC, "Planar Uniformity", NMQC.Planar_Uniformity
-Plugins>NMQC, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
-Plugins>NMQC>Center of Rotation, "Sine Fit", NMQC.C_O_R("Sine")
-Plugins>NMQC>Center of Rotation, "Conjugate Views", NMQC.C_O_R("Conjugate")
+Plugins>NMQC>, "Center of Rotation - Sine Fit", NMQC.C_O_R("Sine")
 Plugins>NMQC>Intrinsic Resolution and Linearity, "Horizontal Stripes", NMQC.IntResol_Linearity("Horizontal")
 Plugins>NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes", NMQC.IntResol_Linearity("Vertical")
-Plugins>NMQC>Spatial Resolution and Pixel_Size, "Two Vertical Bars", NMQC.SSR_PxSz("Vertical")
-Plugins>NMQC>Spatial Resolution and Pixel_Size, "Two Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
-Plugins>NMQC>Spatial Resolution and Pixel_Size, "Four Bars", NMQC.Four_Bar_Phantom
-Plugins>NMQC>Spatial Resolution and Pixel_Size, "Quadrant Bar", NMQC.Bar_Quadrant
-Plugins>NMQC>Tools, "Geometric Mean", NMQC.Tools.Geometric_Mean
-Plugins>NMQC>Tools, "Cardiac Reslicer", NMQC.Tools.Cardiac_Reslicer
+Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Vertical Bars", NMQC.SSR_PxSz("Vertical")
+Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
+Plugins>NMQC>Spatial Resolution and Pixel Size, "Four Bars", NMQC.Four_Bar_Phantom
+Plugins>NMQC>Spatial Resolution and Pixel Size, "Quadrant Bar", NMQC.Bar_Quadrant
+Plugins>NMQC, "-"
+Plugins>NMQC>Work in Progress, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
+Plugins>NMQC>Work in Progress, "Spatial Resolution - Quadrant Bar", NMQC.Bar_Quadrant
+Plugins>NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
+# Plugins>NMQC>Tools, "Geometric Mean", NMQC.Tools.Geometric_Mean
+# Plugins>NMQC>Tools, "Cardiac Reslicer", NMQC.Tools.Cardiac_Reslicer
 
 Help>About_NMQC, "About C O R", NMQC.C_O_R("about")
 Help>About_NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
@@ -37,5 +39,5 @@ Help>About_NMQC, "About Intrinsic Resolution and Linearity", NMQC.IntResol_Linea
 Help>About_NMQC, "About Four Bar Phantom", NMQC.Four_Bar_Phantom("about")
 Help>About_NMQC, "About Quadrant Bar Phantom", NMQC.Bar_Quadrant("about")
 Help>About_NMQC, "About Spatial Resolution and Pixel Size", NMQC.SSR_PxSz("about")
-Help>About_NMQC, "About Geometric Mean", NMQC.Tools.Geometric_Mean("about")
-Help>About_NMQC, "About Cardiac Reslicer", NMQC.Tools.Cardiac_Reslicer("about")
+# Help>About_NMQC, "About Geometric Mean", NMQC.Tools.Geometric_Mean("about")
+# Help>About_NMQC, "About Cardiac Reslicer", NMQC.Tools.Cardiac_Reslicer("about")
