--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -26,6 +26,7 @@ Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Horizontal Bars", NMQC.SSR_
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Four Bars", NMQC.Four_Bar_Phantom
 Plugins>NMQC, "-"
 Plugins>NMQC>Work in Progress, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
+Plugins>NMQC>Work in Progress, "Tomographic Contrast", NMQC.Tomographic_Contrast
 Plugins>NMQC>Work in Progress, "Spatial Resolution - Quadrant Bar", NMQC.Bar_Quadrant
 Plugins>NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
 # Plugins>NMQC>Tools, "Geometric Mean", NMQC.Tools.Geometric_Mean
