Incorporated dependency to ij 1.51 and using roi.getcontainedpoints from there

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
         <dependency>
             <groupId>net.imagej</groupId>
             <artifactId>ij</artifactId>
+            <version>1.51c</version>
         </dependency>
     </dependencies>
 </project>
