fixed StdDev calculation bug

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -17,21 +17,21 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-NMQC, "Planar Uniformity", NMQC.Planar_Uniformity
-NMQC>, "Center of Rotation - Sine Fit", NMQC.C_O_R("Sine")
-NMQC>Intrinsic Resolution and Linearity, "Horizontal Stripes", NMQC.IntResol_Linearity("Horizontal")
-NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes", NMQC.IntResol_Linearity("Vertical")
-NMQC>Spatial Resolution and Pixel Size, "Two Vertical Bars", NMQC.SSR_PxSz("Vertical")
-NMQC>Spatial Resolution and Pixel Size, "Two Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
-NMQC>Spatial Resolution and Pixel Size, "Four Bars", NMQC.Four_Bar_Phantom
-NMQC, "-"
-NMQC>Work in Progress, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
-NMQC>Work in Progress, "Tomographic Contrast", NMQC.Tomographic_Contrast
-NMQC>Work in Progress, "Spatial Resolution - Quadrant Bar", NMQC.Bar_Quadrant
-NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
-NMQC>Tools, "Geometric Mean", Tools.Geometric_Mean
-NMQC>Tools, "Cardiac Reslicer", Tools.Cardiac_Reslicer
-NMQC>Tools, "Select Objects", Tools.Select_Object
+Plugins>NMQC, "Planar Uniformity", NMQC.Planar_Uniformity
+Plugins>NMQC>, "Center of Rotation - Sine Fit", NMQC.C_O_R("Sine")
+Plugins>NMQC>Intrinsic Resolution and Linearity, "Horizontal Stripes", NMQC.IntResol_Linearity("Horizontal")
+Plugins>NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes", NMQC.IntResol_Linearity("Vertical")
+Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Vertical Bars", NMQC.SSR_PxSz("Vertical")
+Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
+Plugins>NMQC>Spatial Resolution and Pixel Size, "Four Bars", NMQC.Four_Bar_Phantom
+Plugins>NMQC, "-"
+Plugins>NMQC>Work in Progress, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
+Plugins>NMQC>Work in Progress, "Tomographic Contrast", NMQC.Tomographic_Contrast
+Plugins>NMQC>Work in Progress, "Spatial Resolution - Quadrant Bar", NMQC.Bar_Quadrant
+Plugins>NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
+Plugins>NMQC>Tools, "Geometric Mean", Tools.Geometric_Mean
+Plugins>NMQC>Tools, "Cardiac Reslicer", Tools.Cardiac_Reslicer
+Plugins>NMQC>Tools, "Select Objects", Tools.Select_Object
 
 Help>About_NMQC, "About C O R", NMQC.C_O_R("about")
 Help>About_NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
