--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -29,9 +29,9 @@ Plugins>NMQC>Work in Progress, "Tomographic Uniformity", NMQC.Tomographic_Unifor
 Plugins>NMQC>Work in Progress, "Tomographic Contrast", NMQC.Tomographic_Contrast
 Plugins>NMQC>Work in Progress, "Spatial Resolution - Quadrant Bar", NMQC.Bar_Quadrant
 Plugins>NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
-Plugins>NMQC>Tools, "Geometric Mean", Tools.Geometric_Mean
-Plugins>NMQC>Tools, "Cardiac Reslicer", Tools.Cardiac_Reslicer
-Plugins>NMQC>Tools, "Select Objects", Tools.Select_Object
+# Plugins>NMQC>Tools, "Geometric Mean", Tools.Geometric_Mean
+# Plugins>NMQC>Tools, "Cardiac Reslicer", Tools.Cardiac_Reslicer
+# Plugins>NMQC>Tools, "Select Objects", Tools.Select_Object
 
 Help>About_NMQC, "About C O R", NMQC.C_O_R("about")
 Help>About_NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
