--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <relativePath />
     </parent>
 
-    <groupId>sc.fiji</groupId>
+    <groupId>cu.edu.centis</groupId>
     <artifactId>NMQC_</artifactId>
     <version>0.2.0-SNAPSHOT</version>
 
@@ -69,15 +69,6 @@
                             <mainClass>${main-class}</mainClass>
                         </manifest>
                     </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
