Automatizing Quadrant Bar Phantom

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -26,10 +26,10 @@ Plugins>NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes rectangular",
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Vertical Bars", NMQC.SSR_PxSz("Vertical")
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Four Bars", NMQC.Four_Bar_Phantom
+Plugins>NMQC>Spatial Resolution and Pixel Size, "Quadrant Bar", NMQC.Bar_Quadrant
 Plugins>NMQC, "-"
 Plugins>NMQC>Work in Progress, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
 Plugins>NMQC>Work in Progress, "Tomographic Contrast", NMQC.Tomographic_Contrast
-Plugins>NMQC>Work in Progress, "Spatial Resolution - Quadrant Bar", NMQC.Bar_Quadrant
 Plugins>NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
 # Plugins>NMQC>Tools, "Geometric Mean", Tools.Geometric_Mean
 # Plugins>NMQC>Tools, "Cardiac Reslicer", Tools.Cardiac_Reslicer
