--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>net.imagej</groupId>
         <artifactId>pom-imagej</artifactId>
-        <version>15.7.1</version>
+        <version>15.8.0</version>
         <relativePath />
     </parent>
 
@@ -18,6 +18,20 @@
 
     <name>plugins/NMQC.jar</name>
     <description>A Maven project implementing Nuclear Medicine Quality Control utilities</description>
+    
+    <url>http://centis.edu.cu/</url>
+    <inceptionYear>2016</inceptionYear>
+    <organization>
+        <name>CENTIS</name>
+        <url>http://centis.edu.cu/</url>
+    </organization>
+    <licenses>
+        <license>
+            <name>Apache License v2+</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <developers>
         <developer>
@@ -54,6 +68,14 @@
         <tag>HEAD</tag>
         <url>https://github.com/BishopWolf/NMQC</url>
     </scm>
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/BishopWolf/NMQC/issues</url>
+    </issueManagement>
+    <ciManagement>
+        <system>Jenkins</system>
+        <url>http://jenkins.imagej.net/job/NMQC</url>
+    </ciManagement>
 
     <properties>
         <main-class>NMQC</main-class>
@@ -77,7 +99,7 @@
         <dependency>
             <groupId>net.imagej</groupId>
             <artifactId>ij</artifactId>
-            <version>1.51c</version>
+            <version>1.51d</version>
         </dependency>
     </dependencies>
 </project>
