--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
     <properties>
         <main-class>NMQC</main-class>
     </properties>
+    
+    <repositories>
+        <!-- NB: for project parent -->
+        <repository>
+            <id>imagej.public</id>
+            <url>http://maven.imagej.net/content/groups/public</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
