Added automatic and manual methods for tomographic contrast

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -29,7 +29,8 @@ Plugins>NMQC>Spatial Resolution and Pixel Size, "Four Bars", NMQC.Four_Bar_Phant
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Quadrant Bar", NMQC.Bar_Quadrant
 Plugins>NMQC, "-"
 Plugins>NMQC>Work in Progress, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
-Plugins>NMQC>Work in Progress, "Tomographic Contrast", NMQC.Tomographic_Contrast
+Plugins>NMQC>Work in Progress, "Tomographic Contrast Automatic", NMQC.Tomographic_Contrast("Automatic")
+Plugins>NMQC>Work in Progress, "Tomographic Contrast Manual", NMQC.Tomographic_Contrast("Manual")
 Plugins>NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
 # Plugins>NMQC>Tools, "Geometric Mean", Tools.Geometric_Mean
 # Plugins>NMQC>Tools, "Cardiac Reslicer", Tools.Cardiac_Reslicer
