--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -27,10 +27,10 @@ Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Vertical Bars", NMQC.SSR_Px
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Four Bars", NMQC.Four_Bar_Phantom
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Quadrant Bar", NMQC.Bar_Quadrant
+Plugins>NMQC>Tomographic Contrast, "Automatic", NMQC.Tomographic_Contrast("Automatic")
+Plugins>NMQC>Tomographic Contrast, "Manual", NMQC.Tomographic_Contrast("Manual")
 Plugins>NMQC, "-"
 Plugins>NMQC>Work in Progress, "Tomographic Uniformity", NMQC.Tomographic_Uniformity
-Plugins>NMQC>Work in Progress, "Tomographic Contrast Automatic", NMQC.Tomographic_Contrast("Automatic")
-Plugins>NMQC>Work in Progress, "Tomographic Contrast Manual", NMQC.Tomographic_Contrast("Manual")
 Plugins>NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
 # Plugins>NMQC>Tools, "Geometric Mean", Tools.Geometric_Mean
 # Plugins>NMQC>Tools, "Cardiac Reslicer", Tools.Cardiac_Reslicer
@@ -39,6 +39,7 @@ Plugins>NMQC>Work in Progress, "COR by Conjugate Views", NMQC.C_O_R("Conjugate")
 Help>About_NMQC, "About C O R", NMQC.C_O_R("about")
 Help>About_NMQC, "About Planar Uniformity", NMQC.Planar_Uniformity("about")
 Help>About_NMQC, "About Tomographic Uniformity", NMQC.Tomographic_Uniformity("about")
+Help>About_NMQC, "About Tomographic Contrast", NMQC.Tomographic_Contrast("about")
 Help>About_NMQC, "About Intrinsic Resolution and Linearity", NMQC.IntResol_Linearity("about")
 Help>About_NMQC, "About Four Bar Phantom", NMQC.Four_Bar_Phantom("about")
 Help>About_NMQC, "About Quadrant Bar Phantom", NMQC.Bar_Quadrant("about")
