Created final version 0.2.0

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -19,10 +19,10 @@
 
 Plugins>NMQC, "Planar Uniformity", NMQC.Planar_Uniformity
 Plugins>NMQC>, "Center of Rotation - Sine Fit", NMQC.C_O_R("Sine")
-Plugins>NMQC>Intrinsic Resolution and Linearity, "Horizontal Stripes shaped", NMQC.IntResol_Linearity("Horizontal include")
-Plugins>NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes shaped", NMQC.IntResol_Linearity("Vertical include")
-Plugins>NMQC>Intrinsic Resolution and Linearity, "Horizontal Stripes rectangular", NMQC.IntResol_Linearity("Horizontal exclude")
-Plugins>NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes rectangular", NMQC.IntResol_Linearity("Vertical exclude")
+Plugins>NMQC>Intrinsic Resolution and Linearity, "Horizontal Stripes", NMQC.IntResol_Linearity("Horizontal include")
+Plugins>NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes", NMQC.IntResol_Linearity("Vertical include")
+# Plugins>NMQC>Intrinsic Resolution and Linearity, "Horizontal Stripes rectangular", NMQC.IntResol_Linearity("Horizontal exclude")
+# Plugins>NMQC>Intrinsic Resolution and Linearity, "Vertical Stripes rectangular", NMQC.IntResol_Linearity("Vertical exclude")
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Vertical Bars", NMQC.SSR_PxSz("Vertical")
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Two Horizontal Bars", NMQC.SSR_PxSz("Horizontal")
 Plugins>NMQC>Spatial Resolution and Pixel Size, "Four Bars", NMQC.Four_Bar_Phantom
