Adding missed strings to localization

--- a/src/main/resources/NMQC.properties
+++ b/src/main/resources/NMQC.properties
@@ -80,3 +80,9 @@ ERROR_IN_CONNJUGATE_VIEW_METHOD=Error in Connjugate View Method
 CENTER_OF_ROTATIONSINE_FIT=Center of Rotation: Sine Fit 
 CURVE_FITTING_ERROR=Curve Fitting Error:\n Error: fit yields Not-a-Number
 BAD_FORMULA=_FUNCTION(X,_A,_...)=Bad formula; should be:\n   y = function(x, a, ...)
+ERROR_WHILE_READING_HEADER=Error while reading header
+NO_INFO_FOR_KEY_IN_DICOM_HEADER=No info for key {0} in dicom header
+BAD_HEADER_OR_NOT_A_DICOM_HEADER=Bad header or not a dicom header
+SAVE_AS_EXCEL_FILE=Save as Excel file?
+TWO_BARS_PHANTOM_NEEDED=Two bars phantom needed
+PROFILE=Profile
