Adding more missed strings to localization

--- a/src/main/resources/NMQC.properties
+++ b/src/main/resources/NMQC.properties
@@ -15,6 +15,7 @@
 TEMPORAL=temporal 
 QUADRANT=Quadrant
 BARWIDTH=Barwidth (mm)
+QUADRANT_BAR_PHANTOM=Quadrant Bar Phantom
 ABOUT_QUADRANT_BAR=About Quadrant Bar Phantom...
 QUADRANT_BAR_DESCRIPTION=This plugin calculates the Spatial Resolution and MTF in a quadrant bar phantom.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
 TEST=Test
