Adding more missed strings to localization

--- a/src/main/resources/NMQC.properties
+++ b/src/main/resources/NMQC.properties
@@ -15,7 +15,7 @@
 TEMPORAL=temporal 
 QUADRANT=Quadrant
 BARWIDTH=Barwidth (mm)
-QUADRANT_BAR_PHANTOM=Quadrant Bar Phantom
+QUADRANT_BAR_PHANTOM=Quadrant Bar Phantom: 
 ABOUT_QUADRANT_BAR=About Quadrant Bar Phantom...
 QUADRANT_BAR_DESCRIPTION=This plugin calculates the Spatial Resolution and MTF in a quadrant bar phantom.\n\n Hander et al.: Rapid objective measurement of gamma camera resolution.\n Medical Physics, Vol. 24, No. 2, February 1997
 TEST=Test
@@ -44,6 +44,7 @@ DESCRIPTION_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=This plugin calculates the System 
 ABOUT_SPATIAL_RESOLUTION_AND_PIXEL_SIZE=About Spatial Resolution and Pixel Size...
 SPATIAL_RESOLUTION_IN=Spatial resolution in 
 PIXEL_SIZE_IN=Pixel size in 
+PIXEL_SIZE=Pixel Size
 DIFFERENCE=Difference(%)
 HEADER_PIXEL_SIZE=Header Pixel size(mm/px)
 REAL_PIXEL_SIZE=Real Pixel size(mm/px)
