more on missing strings for internationalization

--- a/src/main/resources/NMQC.properties
+++ b/src/main/resources/NMQC.properties
@@ -22,8 +22,8 @@ DESCRIPTION_TOMOGRAPHIC_UNIFORMITY=This plugin finds the tomographic uniformity 
 ABOUT_TOMOGRAPHIC_UNIFORMITY=About Tomographic Uniformity...
 TOMOGRAPHIC_UNIFORMITY=Tomographic Uniformity 
 MEAN_IMAGE=Mean Image
-FRAMES_TO=: Frames
-FRAME=: Frame 
+FRAMES_TO=Frames
+FRAME=Frame 
 INITIAL_FRAME=Initial slice
 FINAL_FRAME=Final slice
 CENTRE_BORDER_CONTRAST=Centre - Border Contrast
